Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -256,7 +256,6 @@ nav {
                         color: fade(@color-swatch7, 30%);
                         line-height: @font-swatch6-line-height;
                         letter-spacing: @font-swatch6-letter-spacing;
-                        text-align: center;
                         &:hover {
                             background: lighten(@color-swatch5, 10%);
                             color: @color-swatch1;
@@ -265,7 +264,7 @@ nav {
 
                     &.folder {
                         /* Folder dropdown arrow BG style goes Here */  
-                        margin-right: 10px;            
+                        margin-right: 10px;
                         cursor: pointer;
                         background-image: none;
                         .text {
@@ -278,7 +277,6 @@ nav {
                             line-height: @font-swatch6-line-height;
                             letter-spacing: @font-swatch6-letter-spacing;
                             position: relative;
-                            text-align: center;
                             &:hover {
                                 background: lighten(@color-swatch5, 10%);
                                 color: @color-swatch1;
